argo/guestbook/ingress/guestbook-ingress-v2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: guestbook-ingress
  namespace: default
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              serviceName: guestbook-helm-guestbook
              servicePort: 80
            path: /guest
