argo/guestbook/ingress/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
spec:
  backend:
    serviceName: guestbook-helm-guestbook
    servicePort: 80
